Fix docker run script.